# pirate.py

./: .pylintrc  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: config.yml
docs/: conf.py  index.rst
pirate/: __init__.py  utils.py
tests/: test_insult.py  test_translate.py
