[tool.poetry]
name = "pirate.py"
version = "1.1.0"
description = "Translate text to Pirate Speak."
authors = ["Ombucha <omkaar.nerurkar@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/Ombucha/pirate.py/"
documentation = "https://pirate.readthedocs.io/"
keywords = ["python", "pirate", "translator", "insults"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = ["pirate"]

[tool.poetry.dependencies]
requests = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Ombucha/pirate.py/issues"